.gitignore output/ samples/ の空ディレクトリ公開

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ venv/
 # 環境変数ファイル
 .env
 
-# 音声データ
-samples/
+# 音声データ 空ディレクトリ状態
+samples/**
 
-# 認識結果や集計結果
-output/
+# 認識結果や集計結果 空ディレクトリ状態
+output/**
